# lofreq-gxy

./: .gitignore  Cargo.toml  PLAN.md  README.md  TEST-PLAN.md
benches/: hotpath.rs
docs/parity/: artic_broad_harvard.md  artic_cog_belfast.md  artic_viralrecon.md  ecoli_wgs_30x.md  hg002_mt.md  lineage_mixture.md  local-log.md
docs/plans/: 2026-04-18-sb-compound-filter-plan.md  2026-04-19-proper-pair-filter-plan.md
docs/specs/: 2026-04-18-sb-compound-filter-design.md  2026-04-19-proper-pair-filter-design.md
parity/compare/1000x/: report.txt
parity/compare/100x/: report.txt
parity/compare/5000x/: report.txt
parity/compare/500x/: report.txt
parity/compare/artic_broad_harvard/: report.txt
parity/compare/artic_broad_harvard_pp/: report.txt
parity/compare/artic_cog_belfast/: report.txt
parity/compare/artic_cog_belfast_pp/: report.txt
parity/compare/artic_viralrecon/: report.txt
parity/compare/artic_viralrecon_pp/: report.txt
parity/compare/ecoli_wgs_30x/: report.txt
parity/compare/hg002_mt/: report.txt
parity/compare/lineage_mixture/: summary.tsv
scripts/: build-upstream.sh  compare-truth.sh  compare.sh  fetch-artic-illumina.sh  fetch-ecoli-wgs.sh  fetch-hg002-mt.sh  lineage-mixture-benchmark.sh  preprocess-artic.sh
src/: caller.rs  cli.rs  driver.rs  filter.rs  indel.rs  lib.rs  main.rs  pileup.rs  quality.rs  reference.rs  region.rs  vcf.rs
